View Issue Details

IDProjectCategoryView StatusLast Update
0029659Open CASCADEOCCT:Samplespublic2018-06-29 21:19
Reporterbugmaster Assigned Tobugmaster  
PrioritynormalSeveritymajor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2010 
Product Version7.2.0 
Target Version7.3.0Fixed in Version7.3.0 
Summary0029659: Samples - Image is not displayed in Viewer2d MFC sample
DescriptionSee attached pictures for details (test multi-image) - regression after #0028811.
TagsNo tags attached.
Test case numberNot needed

Attached Files

  • multi-images.png (12,261 bytes)

Activities

bugmaster

2018-03-28 17:44

administrator  

multi-images.png (12,261 bytes)

git

2018-04-08 12:54

administrator   ~0075227

Branch CR29659 has been created by kgv.

SHA-1: 7512dd906662c3abcd2679651fd362669843d868


Detailed log of new commits:

Author: kgv
Date: Sun Apr 8 12:54:21 2018 +0300

    0029659: Samples - Image is not displayed in Viewer2d MFC sample
    
    Fixed wrong Display Mode assigned to Sample2D_Image presentation.

kgv

2018-04-08 12:55

developer   ~0075228

Please take/check trivial patch (sample only).

bugmaster

2018-04-09 12:13

administrator   ~0075242

Checked on IR-WEEK12

git

2018-04-11 11:00

administrator   ~0075342

Branch CR29659 has been deleted by kgv.

SHA-1: 7512dd906662c3abcd2679651fd362669843d868

Related Changesets

occt: master 759e2a15

2018-04-08 09:54:21

kgv


Committer: bugmaster Details Diff
0029659: Samples - Image is not displayed in Viewer2d MFC sample

Fixed wrong Display Mode assigned to Sample2D_Image presentation.
Affected Issues
0029659
mod - samples/mfc/standard/03_Viewer2d/src/Viewer2dDoc.cpp Diff File
mod - samples/mfc/standard/Common/Primitive/Sample2D_Image.cpp Diff File

Issue History

Date Modified Username Field Change
2018-03-28 17:44 bugmaster New Issue
2018-03-28 17:44 bugmaster Assigned To => kgv
2018-03-28 17:44 bugmaster File Added: multi-images.png
2018-04-08 12:11 kgv Summary Images is not displayed in Viewer2d mfc sample => Samples - Images is not displayed in Viewer2d mfc sample
2018-04-08 12:53 kgv Summary Samples - Images is not displayed in Viewer2d mfc sample => Samples - Image is not displayed in Viewer2d MFC sample
2018-04-08 12:54 git Note Added: 0075227
2018-04-08 12:55 kgv Note Added: 0075228
2018-04-08 12:55 kgv Assigned To kgv => bugmaster
2018-04-08 12:55 kgv Status new => resolved
2018-04-08 12:55 kgv Product Version => 7.3.0
2018-04-08 12:55 kgv Status resolved => reviewed
2018-04-08 12:57 kgv Product Version 7.3.0 => 7.2.0
2018-04-08 12:57 kgv Description Updated
2018-04-09 12:13 bugmaster Note Added: 0075242
2018-04-09 12:13 bugmaster Status reviewed => tested
2018-04-11 07:49 bugmaster Changeset attached => occt master 759e2a15
2018-04-11 07:49 bugmaster Status tested => verified
2018-04-11 07:49 bugmaster Resolution open => fixed
2018-04-11 11:00 git Note Added: 0075342
2018-04-11 12:06 bugmaster Test case number => Not needed
2018-06-29 21:13 aiv Fixed in Version => 7.3.0
2018-06-29 21:19 aiv Status verified => closed