0029659: Samples - Image is not displayed in Viewer2d MFC sample

Fixed wrong Display Mode assigned to Sample2D_Image presentation.